--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -4,7 +4,7 @@
   <div class="mt-5 offset-md-1">
    <h2>
     <span class="bg-secondary">
-     <%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細
+     <%= @customer.first_name %><%= @customer.last_name %>さんの会員詳細
     </span>
     </h2>
   </div>
