--- a/app/views/public/home/top.html.erb
+++ b/app/views/public/home/top.html.erb
@@ -48,6 +48,6 @@
       </div>
     </div>
   <div class="text-right">
-    <%= link_to "全ての商品を見る＞",  public_concerts_path %>
+    <%= link_to "全てのコンサート情報を見る＞",  public_concerts_path %>
   </div>
 </div>
