--- a/app/views/public/concerts/index.html.1.erb
+++ b/app/views/public/concerts/index.html.1.erb
@@ -20,26 +20,27 @@
     <div class="col-md-9">
       <div class="d-flex align-items-end">
         <h2 class="mr-3">行事一覧</h2>
-        <p>（全<%= @concerts.count %>件</p>
+        <p>（全<%= @concerts.count %>件）</p>
       </div>
-      <% @concerts.each do |concert| %>
-        <%= link_to public_concert_path(concert.id) do %>
-          <div class="d-flex">
-            <%= image_tag concert.get_image, size: '230x160', class: "card-image-top mr-2" %>
-            <div>
-              <p style="font-size: 24px;"><%= link_to concert.name, public_concert_path(concert.id), class: "card-title mb-2" %></p>
-              <p style="font-size: 18px;">アーティスト名: <%= concert.customer.nickname %></p>
-              <p style="font-size: 18px;">税込<%= concert.add_tax_price.to_s(:delimited) %>円</p>
-            </div>
+      <div class="d-md-flex flex-wrap">
+        <% @concerts.each do |concert|%>
+          <div class="card m-2 text-center card-wrapper">
+            <%= link_to public_concert_path(concert.id) do %>
+              <%= image_tag concert.get_image, size: '230x160', class: "card-image-top" %>
+              <% unless concert.is_active %>
+                <div class="not-sale">
+                  <p>受付終了</p>
+                </div>
+              <% end %>
+              <div class="card-body text-dark py-2 font-weight-bold">
+                <%= link_to concert.name, public_concert_path(concert.id), class: "card-title mb-2" %>
+                税込<%= concert.add_tax_price.to_s(:delimited) %>円
+              </div>
+              <p>アーティスト名 : <%= concert.customer.nickname %></p>
+            <% end %>
           </div>
-          <% unless concert.is_active %>
-            <div class="not-sale">
-              <p>受付終了</p>
-            </div>
-          <% end %>
         <% end %>
-        <hr>
-      <% end %>
+      </div>
       <div id="paginate-wrapper" class="text-center">
         <%= paginate @concerts %>
       </div>
