--- a/app/views/admin/concerts/new.html.erb
+++ b/app/views/admin/concerts/new.html.erb
@@ -20,6 +20,10 @@
                 <dt class="col-4"><%= f.label :image, "アーティスト画像", class: "text-right" %></dt>
                 <dd class="col-8"><%= f.file_field :image, class: "form-control-file pl-0", accept: "image/*" %></dd>
 
+
+                <!--<dt class="col-4"><%#= f.label :held_on, "開催日" %></dt>-->
+                <!--<dd class="col-8"><%#= f.date_field :held_on, class: "form-control" %></dt>-->
+
                 <dt class="col-4 mt-3"><label for="ice-cream-choice">開催者</label></dt>
                  <dd class="col-8 mt-3"><input list="customers" id="customer-choice" name="concert[customer_name]">
 
