interruption concert_evaluation

--- a/app/views/admin/concerts/new.html.erb
+++ b/app/views/admin/concerts/new.html.erb
@@ -22,7 +22,7 @@
 
 
                 <!--<dt class="col-4"><%#= f.label :held_on, "開催日" %></dt>-->
-                <!--<dd class="col-8"><%#= f.date_field :held_on, class: "form-control" %></dt>-->
+                <!--<dd class="col-8"><%#= f.date_select :held_on, use_month_numbers: true, start_year: (Time.now), end_year: (Time.now.year + 2), default: Date.new, class: "form-control" %></dt>-->
 
                 <dt class="col-4 mt-3"><label for="ice-cream-choice">開催者</label></dt>
                  <dd class="col-8 mt-3"><input list="customers" id="customer-choice" name="concert[customer_name]">
