--- a/app/views/admin/home/top.html.erb
+++ b/app/views/admin/home/top.html.erb
@@ -21,7 +21,7 @@
                   <%= l(order.created_at) %>
                   <% end %>
                 </td>
-                <td><%= order.customer.add_full_name %></td>
+                <td><%= order.name %></td>
                 <td><%= order.order_details.sum(:sheet) %></td>
                 <td><%= order.status_i18n %></td>
               </tr>
