--- a/app/views/public/comments/index.html.erb
+++ b/app/views/public/comments/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-12">
-      <h3><span class="bg-light bg-gradient">コメント一覧</span></h3>
+      <h3><span class="bg-light bg-gradient">コメント</span></h3>
     </div>
     <div class="col-12">
 <!--      <table class="table table-hover table-inverse">
