--- a/app/views/public/concerts/show.html.erb
+++ b/app/views/public/concerts/show.html.erb
@@ -34,7 +34,7 @@
      </div>
     </div>
 <div class="container my-5">
-  <h3><span class="bg-light bg-gradient">レビュー一覧</span></h3>
+  <h3><span class="bg-light bg-gradient">レビュー</span></h3>
   <div class="row">
     <div class="col-10">
       <%= form_with model: [@concert, @revue], url: public_concert_revues_path(@concert.id), method: :post do |f| %>
