--- a/app/views/admin/concerts/edit.html.erb
+++ b/app/views/admin/concerts/edit.html.erb
@@ -25,6 +25,36 @@
                 <!--<dt class="col-4 mt-3"><#%= f.label :name, "アーティスト名", class: "text-right" %></dt>-->
                 <!--<dd class="col-8 mt-3"><%#= f.text_field :name, class: "form-control name", placeholder: "アーティスト名" %></dd>-->
 
+                <!--<dt class="col-4 mt-3"><%#= f.label :name, "コンサート名", class: "text-right" %></dt>-->
+                <!--<dd class="col-8 mt-3"><%#= f.text_field :name, class: "form-control name", placeholder: "コンサート名" %></dd>-->
+
+                <!--<dt class="col-4 mt-3"><%#= f.label :introduction, "コンサート説明", class: "text-right" %></dt>-->
+                <!--<dd class="col-8 mt-3"><%#= f.text_area :introduction, class: "form-control introduction", placeholder: "ここに説明文を記述します" %></dd>-->
+
+                <!--<dt class="col-4 mt-3"><%#= f.label :category_id, "カテゴリー", class: "text-right" %></dt>-->
+                <!--<dd class="col-8 mt-3"><%#= f.collection_select :category_id, Category.all, :id, :name, { include_blank: "--選択してください--" }, { class: "form-control" } %></dd>-->
+
+                <!--<dt class="col-4 mt-3"><%#= label :tag, 'タグ', class: "text-right" %></dt>-->
+                <!--<dd class="col-8 mt-3"><%#= text_field :tag,{}, value: @concert.tags.pluck(:name).join(" ") %></dd>-->
+                <!--<small>カンマで区切ることで複数指定できます。</small><br>-->
+
+                <!--<dt class="col-4 mt-3"><%#= f.label :price, "チケット税抜価格", class: "text-right" %></dt>-->
+                <!--<dd class="col-8 mt-3 input-group d-flex align-items-end"><%#= f.text_field :price, class: "form-control price", placeholder: "1000" %>円</dd>-->
+
+                <!--<dt class="col-4 mt-3"><label class="text-right">販売ステータス</label></dt>-->
+                <!--<dd class="col-8 mt-3">-->
+                <!--  <%#= f.radio_button :is_active, :true %>-->
+                <!--  <%#= f.label :is_active, "販売中", value: "true", class: "mr-5" %>-->
+                <!--  <%#= f.radio_button :is_active, :false %>-->
+                <!--  <%#= f.label :is_active, "販売停止中", value: "false" %>-->
+                <!--</dd>-->
+
+                <!--<dd class="col-8 mt-3">-->
+                <!--  <%#= f.label(:public, "公開", class:'concert-status__label') %>-->
+                <!--    <%#= f.radio_button :status, "public" %>-->
+                <!--  <%#= f.label(:private, "非公開", class:'concert-status__label') %>-->
+                <!--    <%#= f.radio_button :status, "private" %>-->
+                <!-- </dd>-->
                 <dt class="col-4 mt-3"><%= f.label :name, "コンサート名", class: "text-right" %></dt>
                 <dd class="col-8 mt-3"><%= f.text_field :name, class: "form-control name", placeholder: "コンサート名" %></dd>
 
@@ -32,11 +62,11 @@
                 <dd class="col-8 mt-3"><%= f.text_area :introduction, class: "form-control introduction", placeholder: "ここに説明文を記述します" %></dd>
 
                 <dt class="col-4 mt-3"><%= f.label :category_id, "カテゴリー", class: "text-right" %></dt>
-                <dd class="col-8 mt-3"><%= f.collection_select :category_id, Category.all, :id, :name, { include_blank: "--選択してください--" }, { class: "form-control" } %></dd>
+                <dd class="col-8 mt-3"><%= f.collection_select :category_id, Category.all, :id, :name, include_blank: "--選択してください--" %></dd>
 
                 <dt class="col-4 mt-3"><%= label :tag, 'タグ', class: "text-right" %></dt>
-                <dd class="col-8 mt-3"><%= text_field :tag,{}, value: @concert.tags.pluck(:name).join(" ") %></dd>
-                <small>スペースで区切ることで複数指定できます。</small><br>
+                <dd class="col-8 mt-3"><%= text_field :tag, value: @concert.tags.pluck(:name) %><small class="text-muted">スペースで区切ることで複数指定できます。</small></dd>
+
 
                 <dt class="col-4 mt-3"><%= f.label :price, "チケット税抜価格", class: "text-right" %></dt>
                 <dd class="col-8 mt-3 input-group d-flex align-items-end"><%= f.text_field :price, class: "form-control price", placeholder: "1000" %>円</dd>
@@ -49,6 +79,7 @@
                   <%= f.label :is_active, "販売停止中", value: "false" %>
                 </dd>
 
+                <dt class="col-4 mt-3"><label class="text-right">公開/非公開</label></dt>
                 <dd class="col-8 mt-3">
                   <%= f.label(:public, "公開", class:'concert-status__label') %>
                     <%= f.radio_button :status, "public" %>
