--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,7 +1,7 @@
-<div class='container'>
-    <div class='row'>
-        <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-            <h2>カテゴリー一覧・追加</h2>
+<div class="container my-5">
+  <div class='row'>
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h3 style="margin-bottom: 20px;"><span class="bg-light bg-gradient">カテゴリー一覧・追加</span></h3>
             <%= form_with model:@category, url: admin_categories_path, method: :post, local:true do |f| %>
                 <div class="form-group">
                     <%= f.label :name %>
