interruption concert_evaluation

--- a/app/views/public/home/about.html.erb
+++ b/app/views/public/home/about.html.erb
@@ -12,7 +12,7 @@ concert _evaluation@example.com</br>
 記載をお願いいたします。</br>
  </p>
  <div style="Text alignment: center;" >
- <%= image_tag 'audience-1853662_1280', size: "550x350" %>
+ <%= image_tag 'concert-852575_1280', size: "550x350" %>
  </div>
  </div>
  </div>
