--- a/app/views/public/home/top.html.erb
+++ b/app/views/public/home/top.html.erb
@@ -21,13 +21,14 @@
   <div class="col-md-8 offset-md-1 mt-5">
     <div class="row">
       <div class="position-relative" style="left: 120px;">
-        <%= image_tag 'concert-852575_1280', size:"600x350", style: "margin-bottom: -20px;" %>
+        <%= image_tag 'concert-2527495_1280', size:"600x350", style: "margin-bottom: -20px;" %>
         <div class="card-img-overlay d-flex justify-content-center align-items-center">
           <h3 class="card-title text-light text-center">
-            ようこそ、concert_evaluationへ!<br>
-            このサイトは、コンサートのECサイトになります。<br>
-            会員でない方も閲覧はできますが、<br>
-            チケットの購入には会員登録が必要になります。
+            <strong>ようこそ、concert_evaluationへ!</strong><br>
+            <strong>このサイトはコンサートのECサイトです。</strong><br>
+            <strong>会員でない方も閲覧はできますが、</strong><br>
+            <strong>チケットの購入には会員登録が</strong><br>
+            <strong>必要になります。</strong>
           </h3>
         </div>
       </div>
