--- a/app/views/admin/concerts/index.html.erb
+++ b/app/views/admin/concerts/index.html.erb
@@ -4,7 +4,7 @@
       <h3><span class="bg-light bg-gradient">コンサート一覧</span></h3>
     </div>
     <div class="col-2 ml-auto">
-      <%= link_to " + ", new_admin_concert_path, class: "btn btn-light rounded-circle" %>
+      <%= link_to " コンサート登録+ ", new_admin_concert_path, class: "btn btn-light rounded-circle" %>
     </div>
 
             <table class="table table-bordered border-dark">
