--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,56 +9,63 @@
         <ul class="navbar-nav ml-auto">
         <% if customer_signed_in? %>
           <li class="mr-3">
-            <%= link_to "マイページ", public_customer_path(current_customer),class: 'nav-link text-light' %>
+            <%= link_to "マイページ", public_customer_path(current_customer), class: 'nav-link text-white font-weight-bold' %>
           </li>
           <li class="mr-3">
-            <%= link_to "Aboutページ", public_about_path,class: 'nav-link text-light' %>
+            <%= link_to "Aboutページ", public_about_path,class: 'nav-link text-white font-weight-bold' %>
           </li>
           <li class="mr-3">
-            <%= link_to "コンサート一覧", public_concerts_path,class: 'nav-link text-light' %>
+            <%= link_to "コンサート一覧", public_concerts_path,class: 'nav-link text-white font-weight-bold' %>
           </li>
           <li class="mr-3">
-            <%= link_to "カート", public_cart_items_path,class: 'nav-link text-light' %>
+            <%= link_to "カート", public_cart_items_path,class: 'nav-link text-white font-weight-bold' %>
           </li>
           <li class="mr-3">
-            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete,class: 'nav-link text-light' %>
+            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete,class: 'nav-link text-white font-weight-bold' %>
           </li>
 
         <% elsif admin_signed_in? %>
           <li class="mr-3">
-            <%= link_to "コンサート一覧", admin_concerts_path,class: 'nav-link text-light' %>
+            <%= link_to "コンサート一覧", admin_concerts_path,class: 'nav-link text-white font-weight-bold' %>
           </li>
           <li class="mr-3">
-            <%= link_to "会員一覧", admin_customers_path,class: 'nav-link text-light' %>
+            <%= link_to "会員一覧", admin_customers_path,class: 'nav-link text-white font-weight-bold' %>
           </li>
           <li class="mr-3">
-            <%= link_to "注文履歴一覧", admin_root_path,class: 'nav-link text-light' %>
+            <%= link_to "注文履歴一覧", admin_root_path,class: 'nav-link text-white font-weight-bold' %>
           </li>
           <li class="mr-3">
-            <%= link_to "カテゴリー一覧", admin_categories_path,class: 'nav-link text-light' %>
+            <%= link_to "カテゴリー一覧", admin_categories_path,class: 'nav-link text-white font-weight-bold' %>
           </li>
           <li class="mr-3">
-            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete,class: 'nav-link text-light' %>
+            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete,class: 'nav-link text-white font-weight-bold' %>
           </li>
         <% else %>
            <li class="mr-3">
-          <%= link_to 'ゲストログイン（閲覧用）', public_guest_sign_in_path, class: "nav-link text-light", method: :post %>
+          <%= link_to 'ゲストログイン（閲覧用）', public_guest_sign_in_path, class: "nav-link text-white font-weight-bold", method: :post %>
           </li>
           <li class="mr-3">
-            <%= link_to "コンサート一覧", public_concerts_path,class: 'nav-link text-light' %>
+            <%= link_to "コンサート一覧", public_concerts_path,class: 'nav-link text-white font-weight-bold' %>
           </li>
           <li class="mr-3">
-            <%= link_to "Aboutページ", public_about_path,class: 'nav-link text-light' %>
+            <%= link_to "Aboutページ", public_about_path,class: 'nav-link text-white font-weight-bold' %>
           </li>
           <li class="mr-3">
-            <%= link_to "新規登録", new_customer_registration_path,class: 'nav-link text-light' %>
+            <%= link_to "新規登録", new_customer_registration_path,class: 'nav-link text-white font-weight-bold' %>
           </li>
           <li class="mr-3">
-            <%= link_to "ログイン", new_customer_session_path,class: 'nav-link text-light' %>
+            <%= link_to "ログイン", new_customer_session_path,class: 'nav-link text-white font-weight-bold' %>
           </li>
         <% end %>
         </ul>
       </div>
     </div>
+    <style>
+     .navbar-brand span {
+      font-weight: bold;
+      color: white;
+      }
+    </style>
   </nav>
 </header>
+
