--- a/app/views/public/concerts/show.html.erb
+++ b/app/views/public/concerts/show.html.erb
@@ -12,9 +12,9 @@
         <p class="h5 mb-4"><%= @concert.introduction %></p>
          <div class="tag-list mb-4">
           <% @concert.tags.each do |tag| %>
-           <span class="badge badge-secondary mr-2"><%= link_to tag.name, public_concerts_path(tag_name: tag.name) %></span>
+           <%= link_to tag.name, public_concerts_path(tag_name: tag.name), class: "btn btn-outline-secondary mr-2 mb-2" %>
           <% end %>
-        </div>
+         </div>
         <p class="h4 mb-4">
           <%= @concert.add_tax_price.to_s(:delimited) %>（<%= @concert.price.to_s(:delimited) %>）円
           <small>(税込)</small>
