intteruption concert_evaluation

--- a/app/views/admin/concerts/edit.html.erb
+++ b/app/views/admin/concerts/edit.html.erb
@@ -6,6 +6,16 @@
         <h3 class="mb-5 col-8 d-flex justify-content-center"><span>コンサート編集</span></h3>
 
         <%= form_with model: @concert, url: admin_concert_path(@concert.id), method: :patch, local:true do |f| %>
+        <% if @concert.errors.any? %>
+            <div id="error_explanation">
+              <h3><%= pluralize(@concert.errors.count, "error") %> prohibited this obj from being saved:</h3>
+              <ul>
+                <% @concert.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
           <div class="w-50 mx-auto">
             <dl class="row">
               <dt class="col-4"><%= f.label :image, "アーティスト画像", class: "text-right" %></dt>
