Finish concert_evaluation

--- a/app/views/public/concerts/index.html.erb
+++ b/app/views/public/concerts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row justify-content-start"> <!-- justify-content-startに変更 -->
+  <div class="row justify-content-start">
     <div class="col-lg-6 col-md-8">
       <%= form_with url: public_concerts_path, method: :get, class: "form-inline" do |f| %>
         <div class="input-group">
