--- a/app/views/public/concerts/index.html.erb
+++ b/app/views/public/concerts/index.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
-  <div class="row justify-content-start">
-    <div class="col-lg-6 col-md-8">
+<div class="container px-5 px-sm-0">
+ <div class="row">
+  <div class="col-lg-6 col-md-8">
       <%= form_with url: public_concerts_path, method: :get, class: "form-inline" do |f| %>
         <div class="input-group">
           <%= f.text_field :tag_name, class: "form-control", placeholder: "タグ名を入力してください" %>
@@ -12,21 +12,21 @@
     </div>
   </div>
 </div>
-<div class="container" id="item-wrapper">
-  <div class="row">
-    <div class="col-md-2">
-      <%= render 'public/tmp/category_list', categories: @categories %>
-    </div>
-    <div class="col-md-9">
-      <div class="d-flex align-items-end">
+<div class="container px-5 px-sm-0">
+ <div class="row">
+  <div class="col-sm-2 mt-5">
+   <%= render 'public/tmp/category_list', categories: @categories %>
+  </div>
+    <div class="col-md-9 mx-auto mt-5 pl-5">
+      <div class="d-flex align-items-end mb-5">
         <h2 class="mr-3">行事一覧</h2>
-        <p>（全<%= @concerts.count %>件</p>
+        <p>全<%= @concerts.count %>件</p>
       </div>
       <% @concerts.each do |concert| %>
         <%= link_to public_concert_path(concert.id) do %>
           <div class="d-flex">
             <%= image_tag concert.get_image, size: '230x160', class: "card-image-top mr-2" %>
-            <div>
+            <div style="margin-left: 28px">
               <p style="font-size: 24px;"><%= link_to concert.name, public_concert_path(concert.id), class: "card-title mb-2" %></p>
               <p style="font-size: 18px;">アーティスト名: <%= concert.customer.nickname %></p>
               <p style="font-size: 18px;">税込<%= concert.add_tax_price.to_s(:delimited) %>円</p>
