--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,2 +1,13 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+body {
+  background-image: url('../images/moon-7102510_1920.jpg');
+  background-size: cover;
+  background-repeat: repeat-y;
+}
+
+.background {
+  background-color: rgba(255, 255, 255, 0.5);
+  height: 100vh;
+}
