--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,18 @@
 
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>-->
+    <script src="https://kit.fontawesome.com/4f3d4442e3.js" crossorigin="anonymous"></script>
   </head>
 
-  <body>
+  <body background="/img/moon-7102510_1920.jpg">
+    <div class="background">
     <%= render 'layouts/header' %>
       <main>
        <p id="notice"><%= notice %></p>
       </main>
     <%= yield %>
     <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
