--- a/app/views/public/home/about.html.erb
+++ b/app/views/public/home/about.html.erb
@@ -1,8 +1,8 @@
 <div class="container px-5 text-center mx-auto">
  <div class="row">
  <div class="px-5 mx-auto ml-auto">
- <div style="Background color: #f9c5d1; padding: 2em;Border radius: 1em;" >
- <H1 Style="Font Size: 6em; Margin Bottom: 0.3em; Color: #ff8c00;" > concert_evaluationとは</h1>
+ <div style="Background color: #f9c5d1; padding: 2em;Border radius: 1em;">
+ <H1 Style="Font Size: 6em; Margin Bottom: 0.3em; Color: #ff8c00;  text-shadow: 2px 2px #ffffff;"> concert_evaluationとは</h1>
  <p style="font size: 1.5em; color: #4a4a4a;" >
  concert_evaluationはコンサートのチケット購入サイトです。</br>
 またご自身のイベント情報を発信することも可能です。</br>
