--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+.background {
+  background-image: image-url('moon-7102510_1920.jpg');
+  background-size: cover;
+  background-repeat: repeat-y;
+  height: 100vh;
+  // background-color: rgba(255,255,255,0.5);
+  .background-wrapper {
+    background-color: rgba(255,255,255,0.5);
+    height: 100vh;
+    overflow: scroll;
+  }
+}
