--- a/app/views/admin/concerts/show.html.erb
+++ b/app/views/admin/concerts/show.html.erb
@@ -23,6 +23,10 @@
         <p class="col-3 h5">カテゴリー</p>
         <p class="col-8"><%= @concert.category.name %></p>
       </div>
+      <!--<div class="form-group row">-->
+      <!--  <p class="col-3 h5">開催日</p>-->
+      <!--  <p class="col-8"><%#= @concert.category.name %></p>-->
+      <!--</div>-->
       <div class="form-group row">
         <p class="col-3 h5">タグ</p>
         <div class="tag-list mb-4">
