--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,2 +1,25 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+
+#top-message {
+  font-size: 24px;
+}
+
+#top-table {
+}
+
+@media (max-width: 400px) {
+  #top-message {
+    font-size: 18px;
+  }
+
+  #top-table {
+    width: 100%;
+    overflow-x: scroll;
+  }
+
+  #about-title {
+    font-size: 24px;
+  }
+}
