--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer class='fixed-bottom'>
-  <div class='container mt-5'>
+<footer class='fixed-bottom mt-5' style="z-index: 10;">
+  <div class='container'>
   	<div class='row'>
     	<div class='mx-auto'>
     		<p>CopyRight Infratop.inc</p>
