--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -38,14 +38,15 @@
           <%= f.radio_button :option, 2, {class: "from-input-check"} %>
           <%= f.label :新しいお届け先 %>
       </div>
+      <div class='table-responsive'>
       <table class='col-8 ml-4 mb-2'>
         <tr>
           <td class='col-2'></td>
           <td class='col-6'></td>
         </tr>
         <tr>
-          <td><%= f.label :other_postal_code, "郵便番号(ハイフンなし)" %></td>
-          <td><%= f.text_field :other_postal_code %></td>
+          <td nowrap><%= f.label :other_postal_code, "郵便番号(ハイフンなし)" %></td>
+          <td nowrap><%= f.text_field :other_postal_code %></td>
         </tr>
         <tr>
           <td><%= f.label :other_address, "住所" %></td>
@@ -56,6 +57,7 @@
           <td><%= f.text_field :other_name %></td>
         </tr>
       </table>
+      </div>
     </div>
 
     <div class='text-center mb-2'>
